[package]
name = "any_ls"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy-regex = "3.4"
tempfile = "3.10"
env_logger = "0.11"
log = "0.4"
clap = { version = "4.5", features = ["derive"] }

serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"

lsp-server = { version = "0.7" }
lsp-types = { version = "0.97" }
lsp-textdocument = { version = "0.4" }
